2006-09-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Olympus IR-300

2006-09-18  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Kodak CD33.

2006-09-16  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Creative Zen V.
	* library.c: Added Canon PowerShot A630

2006-09-15  Hubert Figuiere  <hub@figuiere.net>

	* library.c: Added Canon EOS 400D/Digital Rebel XTi
	This camera does not have the infamous PTP bug.

2006-09-13  Marcus Meissner  <marcus@jet.franken.de>
	
	* ptp.[ch]: formatstore function (from libmtp).
	* library.c: fixed iconv() usage for non glibc etc (from libmtp).

2006-09-11  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added iRIver T10 2GB model.
	* library.c: Added Toshiba Gigabeat P10 model.

2006-09-09  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Uses short timeout during startup, but
	  longer timeouts later on.

2006-09-03  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Implemented MTP Abstract Playlist upload.
	
2006-09-02  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: CANON cmd 9006 is "lookup object".
	  (Could be used later to speed up directory listing.)

2006-08-31  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Handle cameras which just have files, but no
	  directory or root object. Kodak EasyShare C330 for instance.

	* library.c: GP_CAPTURE_IMAGE -> GP_OPERATION_CAPTURE_IMAGE.

	* library.c,ptp-bugs.h:  Mark up capture capable cameras for
	  the static capabilities.

	* library.c: added Samsung YP-F2J (from libmtp).

2006-08-30  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added iRiver Clix.

2006-08-25  Linus Walleij  <triad@df.lth.se>
	    Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,library.c,ptp.h,ptp-pack.c:

	  Use iconv(3) to convert the UCS-2 used in ptp
	  strings to the current codeset (detected by
	  nl_langinfo(3)).

2006-08-27  Marcus Meissner  <marcus@jet.franken.de>
